@@ -1066,6 +1066,17 @@ How many stars in the sky?
             </note>
           </listitem>
         </varlistentry>
+
+        <varlistentry>
+          <term>needspace=<replaceable>dimen</replaceable></term>
+
+          <listitem>
+            <para>Gives a height (dimension with unit, such as
+            <replaceable>4cm</replaceable>) necessary to begin with the group.
+            If the remaining vertical space on the current page is lower than
+            this value, the group will begin on the next page.</para>
+          </listitem>
+        </varlistentry>
       </variablelist>
     </sect2>
 
@@ -4634,7 +4645,8 @@ Name:
           <para>The test part can use operators like <code>&gt;</code>
           (greater), <code>&gt;=</code> (greater or equal), <code>&lt;</code>
           (lesser), <code>&lt;=</code> (lesser or equal), <code>==</code>
-          (equal), <code>!=</code> (different), <code>||</code> (or), <code>&amp;&amp;</code> (and).</para>
+          (equal), <code>!=</code> (different), <code>||</code> (or),
+          <code>&amp;&amp;</code> (and).</para>
         </note>
 
         <para>Other variables can also be used:</para>
@@ -8050,8 +8062,8 @@ Moniuszko,Stanisław,003</programlisting>
             <replaceable>time</replaceable></option></term>
 
             <listitem>
-              <para>sets a delay of <replaceable>time</replaceable>
-              seconds between each sending.</para>
+              <para>sets a delay of <replaceable>time</replaceable> seconds
+              between each sending.</para>
             </listitem>
           </varlistentry>
         </variablelist>
