@@ -1112,6 +1112,18 @@ Combien y a-t-il d'étoiles dans le ciel ?
             </note>
           </listitem>
         </varlistentry>
+
+        <varlistentry>
+          <term>needspace=<replaceable>dim</replaceable></term>
+
+          <listitem>
+            <para>Donne une hauteur (avec l'unité : par exemple
+            <replaceable>4cm</replaceable>) nécessaire pour commencer l'énoncé
+            de ce groupe. Si la place encore disponible dans la page courante
+            est inférieure à cette valeur, alors l'énoncé du groupe commencera
+            sur la page suivante.</para>
+          </listitem>
+        </varlistentry>
       </variablelist>
     </sect2>
 
@@ -4988,8 +5000,8 @@ Durée : 10 minutes.
           <para>Le test peut utiliser les opérateurs <code>&gt;</code>
           (supérieur à), <code>&gt;=</code> (supérieur ou égal à),
           <code>&lt;</code> (inférieur à), <code>&lt;=</code> (inférieur ou
-          égal à), <code>==</code> (égalité), <code>!=</code>
-          (différence),  <code>||</code> (ou), <code>&amp;&amp;</code> (et).</para>
+          égal à), <code>==</code> (égalité), <code>!=</code> (différence),
+          <code>||</code> (ou), <code>&amp;&amp;</code> (et).</para>
         </note>
 
         <para>D'autres variables sont aussi utilisables :</para>
