@@ -1,6 +1,8 @@
 1.3.0+hg2016-11-09 (2016-11-09)
 
   * Switch to Gtk3
+  
+  * AMC-TXT: new group option 'needspace'
 
   * Bugfixes
 
